--- a/style/editorstyle.css
+++ b/style/editorstyle.css
@@ -5,7 +5,7 @@ body{
 }
 
 .CodeMirror-border {
-  width: 50%;
+  width: 49%;
   border: 0px solid #ddddff;
   /*border-top: 1px solid rgba(255, 255, 255, 0.6);*/
   border-radius: 5px;
@@ -57,8 +57,8 @@ body{
 #rightColumn {
   float: left;
   position: fixed;
-  left: 52%;
-  padding: 5px 15px 10px 0px;
+  left: 50%;
+  padding: 5px 15px 10px 20px;
   overflow-y: auto;
 }
 
@@ -82,11 +82,12 @@ body{
 }
 
 .errorMessage {
-  background-color: rgba(204, 30, 30, 1);
+  background-color: #CC3E1E;/*rgba(204, 30, 30, 1);*/
+  x
 }
 
 .fileMessage {
-  background-color: #1E4ECC;
+  background-color: #3E6EcC;/*#1E4ECC;*/
 }
 
 #compilationIndicator {
